# ai-trading-desk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/01_market_brief/: README.md  main.py
agents/02_text_to_sql/: README.md  main.py
agents/03_repo_interpreter/: README.md  main.py
agents/04_research_graph/: README.md  main.py
agents/05_desk_analyst/: README.md  main.py
agents/05_desk_analyst/memos/: SPY-20260716-023442.json
agents/06_voice/: README.md  personas.py
common/: approach.py  broker.py  bus.py  calllog.py  db.py  deskgraph.py  llm.py  market.py  news.py  quotes.py  replay.py  signals.py  social.py  sso_client.py  tape.py  tickers.py  trades.py  xpulse.py
data/: watch-last.json
deploy/: .env.example  Caddyfile  docker-compose.aws.yml
docs/: BACKTEST.md  DEPLOY_AWS.md  PHONE.md  PREREG_CAPITULATION.md  REASONING_LAYER.md
evals/: README.md  datasets.py  run_evals.py  voice_evals.py
k8s/: 00-namespace.yaml  10-secret.example.yaml  20-deployment.yaml  30-service.yaml  40-ingress.yaml
scripts/: backtest_model.py  backtest_oos.py  backtest_tape.py  calibrate_approach.py  capitulation_option.py  confirm_capitulation.py  confirm_combo.py  house_rules.py  make_minitrade.py  replicate_dayshape.py  session_split.py  spike_test.py  sweep_approach.py  weight_search.py
tests/: conftest.py
tests/integration/: test_live.py  test_trade_mirror_api.py  test_watchlist_shared.py  test_watchlist_sync.py  test_web_api.py
tests/js/: watchlist.test.js
tests/unit/: test_broker_mirror.py  test_db.py  test_graphs.py  test_live_market.py  test_market.py  test_personas.py  test_quotes.py  test_signals.py  test_sql_guardrails.py  test_sso_client.py  test_sso_wiring.py  test_stream_quotes.py  test_tape.py  test_trades.py
web/: README.md  __main__.py  personas_store.py  phone.py  registry.py  server.py
web/landing/: index.html  themes.html
web/portal/: index.html
web/static/: app.js  desk-chart.js  index.html  style.css  themes.js  watchlist.js
web/trade/: index.html
