[project]
name = "ai-trading-desk"
version = "0.1.0"
description = "minitrade: a live options-trading cockpit with a deterministic tape-reading engine and Marcus, its real-time voice analyst."
requires-python = ">=3.10"
dependencies = [
    # The LangChain and LangGraph stack left with the text agents, which now
    # live in agent-observatory. What stays is the voice desk: langsmith only
    # so Marcus's tool calls still show up as traces.
    "langsmith>=0.3.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websocket-client>=1.7",
    "openai>=1.60",
]
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
