[project]
name = "ai-trading-desk"
version = "0.1.0"
description = "minitrade: a live options-trading cockpit with a deterministic tape-reading engine and Marcus, its real-time voice analyst."
requires-python = ">=3.10"
dependencies = [
    # LangChain left with the text agents (agent-observatory). LangGraph came
    # BACK on 2026-07-20 for the desk brain (common/deskgraph.py): the
    # deterministic pipeline runs as a StateGraph so every live decision is a
    # traced, observable run - no langchain, no LLM in the graph.
    "langgraph>=0.2.60",
    "langsmith>=0.3.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websocket-client>=1.7",
    "openai>=1.60",
]
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
